--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,55 @@
+html, body {
+	width: 100%;
+	height: 120%;
+	margin: 0px;
+}
 
+.pageContainer {
+	margin: 0 auto;
+	min-width: 500px;
+	width: 70%;
+}
+
+.pageContainer2 {
+	height: 80%;
+	width: 100%;
+}
+
+.headerContainer {
+	font-family: sans-serif;
+	font-size: 14pt;
+	line-height: 1.5;
+	text-align: justify;
+}
+
+.welcomeContainer {
+	text-align: right;
+	font-family: sans-serif;
+	font-size: 15pt;
+}
+
+.table {
+	height: 70%;
+	width: 100%;
+
+}
+
+.link {
+	width: 25%%;
+	height: 150px;
+	margin: 0 auto;
+	box-sizing: border-box;
+	float: left;
+}
+
+.bottomContainer {
+	width: 100%;
+	height: 10%;
+	border-top: 1px solid #AAA;
+	text-align: center;
+}
+
+img {
+	margin: 0 auto;
+	display: block;
+}
